toast behind navbar fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,11 @@
   }
 }
 header nav {
-  z-index: 999999;
+  z-index: 99;
+}
+
+.Toastify {
+  z-index: 100;
 }
 
 .swiper {
